--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -6,7 +6,7 @@ sites:
   - name: Pistachio
     url: https://app.collato.com/health-check
   - name: Caramel Swirl
-    url: https://api.collato.com/healtch-check
+    url: https://api.collato.com/health-check
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
