--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,20 +3,19 @@ owner: collato # Your GitHub organization or username, where this repository liv
 repo: status # The name of this repository
 
 sites:
-  - name: Pistachio
+  - name: Collato Application
     url: https://app.collato.com/health-check
-  - name: Caramel Swirl
-    url: https://api.collato.com/health-check
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  # cname: demo.upptime.js.org
   baseUrl: /status
+  # cname: status.collato.com
   logoUrl: https://pistachio-public-assets.s3.eu-central-1.amazonaws.com/collato-logo.png
   name: Collato Health Check
   introTitle: "Collato Health Check"
   introMessage: Lorem ipsum
+  faviconSvg: https://pistachio-public-assets.s3.eu-central-1.amazonaws.com/logo-icon-black.svg
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
