--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -12,9 +12,7 @@ status-website:
   baseUrl: /status
   # cname: status.collato.com
   logoUrl: https://pistachio-public-assets.s3.eu-central-1.amazonaws.com/collato-logo.png
-  name: Collato Health Check
-  introTitle: "Collato Health Check"
-  introMessage: Lorem ipsum
+  name: Collato Status
   faviconSvg: https://pistachio-public-assets.s3.eu-central-1.amazonaws.com/logo-icon-black.svg
 
 # Upptime also supports notifications, assigning issues, and more
