--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,7 +4,7 @@ repo: status # The name of this repository
 
 sites:
   - name: Collato Application
-    url: https://app.collato.com/health-check
+    url: https://api.collato.com/health-check
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
